--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -78,7 +78,8 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/users/reservas">Relatórios</a></li>
                                 <li><a class="dropdown-item" href="/users/perfil/<%= user.id %>">Perfil</a></li>
-                                <li><a class="dropdown-item" href="/users/editar/<%= user.id %>">conta</a></li>
+                                <li><a class="dropdown-item" href="/users/editar/<%= user.id %>">Conta</a></li>
+                                <li><a class="dropdown-item" href="/users/servicos/<%= user.id %>">Serviços</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                     <a class="nav-link" href="/logout">
