Ajuste de campo faltando

--- a/views/clientereserva.ejs
+++ b/views/clientereserva.ejs
@@ -37,6 +37,7 @@
                         <input type="hidden" name="telefone" value="<%= data.telefone %>">
                         <input type="hidden" name="data" value="<%= data.data %>">
                         <input type="hidden" name="horario" value="<%= data.horario %>">
+                        <input type="hidden" name="obs" value="<%= data.obs.trim() %>">
                         <input type="hidden" name="id" value="<%= data.id %>">
 
                         <button class="btn alert-success mt-2" type="submit">Atender</button>
