--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,11 +8,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <br>
-
             <div class="container mt-3">
-
                 <div class="row justify-content-center">
-
                     <h4 align="center" id="contatos">Converse Conosco</h4>
                     <div class="col-sm-4">
                         <h4 class="text-center" id="contacto">Social</h4>
@@ -20,7 +17,6 @@
                             <a href="#" class="btn btn-outline-primary">facebook</a>
                             <a href="#" class="btn btn-outline-info">Twitter</a>
                             <a href="#" class="btn btn-outline-warning">Instragram</a>
-
                         </div>
                     </div>
                     <div class="col-12 mt-3">
@@ -33,21 +29,14 @@
                         </blockquote>
                     </div>
                 </div>
-
-
             </div>
+        </div>
     </nav>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.js"></script>
 <script src="/js/main.js"></script>
-
 </html>
