--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -26,15 +26,12 @@
                 <div class="col-md-6 photo">
                     <div>
                         <% if(foto != null ){ %>
-
-                        <img src="/foto/<%= foto.nome %>" alt="foto1" width="300" height="400">
-
+                            <img src="/foto/<%= foto.nome %>" alt="foto1" width="300" height="400">
                         <% }else { %>
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOc9VDs02ZrmIC7pS3WzBTvXl8UrI3jwAOVQ&usqp=CAU"
-                                 alt="foto1" width="300">
-
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOc9VDs02ZrmIC7pS3WzBTvXl8UrI3jwAOVQ&usqp=CAU" alt="foto1" width="300">
                         <% } %>
                     </div>
+
                     <form action="/users/perfil/foto" method="post" enctype="multipart/form-data" class="mt-3">
                         <input type="file" class="btn btn-outline-success" name="foto" id="foto" required>
                         <button type="submit" class="btn btn-success">Carregar</button>
@@ -46,12 +43,16 @@
                     <br>
                     <label for="">Nome</label>
                     <p class="form"><Strong><%= usuario.nome %></Strong></p>
+
                     <label for=""> cpf</label>
                     <p class="form"><Strong><%= usuario.cpf %></Strong></p>
+
                     <label for=""> email</label>
                     <p class="form"><Strong><%= usuario.email %></Strong></p>
+
                     <label for=""> profissao</label>
                     <p class="form"><Strong><%= usuario.profissao %></Strong></p>
+
                     <label for=""> telefone</label>
                     <p class="form"><Strong><%= usuario.telefone %></Strong></p>
                 </div>
