Melhoria de cor no botão

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -170,7 +170,7 @@
                             <div style="display: flex; justify-content: space-between">
                                 <h4>Agenda <strong class="alert-success">Aberta</strong></h4>
 
-                                <button class="btn btn-outline-warning mt-1" data-bs-target="#servicoModal" data-bs-toggle="modal">
+                                <button class="btn btn-dark mt-1" data-bs-target="#servicoModal" data-bs-toggle="modal">
                                     Serviços
                                 </button>
 
