Auto focus para melhor usabilidade

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
 
                 <form action="/login" method="POST">
                     <label for="email">Email do Usuário:</label>
-                    <input type="text" name="email" class="form-control" id="email">
+                    <input type="text" name="email" class="form-control" id="email" autofocus>
 
                     <label for="senha">Senha:</label>
                     <input type="password" id="senha" name="senha" class="form-control">
