Ajuste com foto padrão do sistema e estrutura de pastas

--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -28,7 +28,7 @@
                         <% if(foto != null ){ %>
                             <img src="/foto/<%= foto.nome %>" alt="foto1" width="300" height="400">
                         <% }else { %>
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOc9VDs02ZrmIC7pS3WzBTvXl8UrI3jwAOVQ&usqp=CAU" alt="foto1" width="300">
+                            <img src="/foto/images.png" alt="foto1" width="300">
                         <% } %>
                     </div>
 
